--- a/index.html
+++ b/index.html
@@ -2,144 +2,179 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>dom查询</title>
-<link rel="stylesheet" type="text/css" href="style/css.css" />
-<script type="text/javascript">
-	window.onload = function(){
-		//1.查找#bj节点
-		document.getElementById("btn01").onclick = function () {
-			var bjObj = document.getElementById("bj");
-			alert(bjObj.innerHTML);
-		}
-		//2.查找所有li节点
-		var btn02Ele = document.getElementById("btn02");
-		btn02Ele.onclick = function(){
-			var lis = document.getElementsByTagName("li");
-			alert(lis.length)
-		};
-		//3.查找name=gender的所有节点
-		var btn03Ele = document.getElementById("btn03");
-		btn03Ele.onclick = function(){
-			var genders = document.getElementsByName("gender");
-			alert(genders.length)
-		};
-		//4.查找#city下所有li节点
-		var btn04Ele = document.getElementById("btn04");
-		btn04Ele.onclick = function(){
-			//1 获取id为city的节点
-			//2 通过city节点.getElementsByTagName按标签名查子节点
-			var lis = document.getElementById("city").getElementsByTagName("li");
-			alert(lis.length)
-		};
-		//5.返回#city的所有子节点
-		var btn05Ele = document.getElementById("btn05");
-		btn05Ele.onclick = function(){
-			//1 获取id为city的节点
-			//2 通过city获取所有子节点
-			alert(document.getElementById("city").childNodes.length);
-		};
-		//6.返回#phone的第一个子节点
-		var btn06Ele = document.getElementById("btn06");
-		btn06Ele.onclick = function(){
-			// 查询id为phone的节点
-			alert( document.getElementById("phone").firstChild.innerHTML );
-		};
-		//7.返回#bj的父节点
-		var btn07Ele = document.getElementById("btn07");
-		btn07Ele.onclick = function(){
-			//1 查询id为bj的节点
-			var bjObj = document.getElementById("bj");
-			//2 bj节点获取父节点
-			alert( bjObj.parentNode.innerHTML );
-		};
-		//8.返回#android的前一个兄弟节点
-		var btn08Ele = document.getElementById("btn08");
-		btn08Ele.onclick = function(){
-			// 获取id为android的节点
-			// 通过android节点获取前面兄弟节点
-			alert( document.getElementById("android").previousSibling.innerHTML );
-		};
-		//9.读取#username的value属性值
-		var btn09Ele = document.getElementById("btn09");
-		btn09Ele.onclick = function(){
-			alert(document.getElementById("username").value);
-		};
-		//10.设置#username的value属性值
-		var btn10Ele = document.getElementById("btn10");
-		btn10Ele.onclick = function(){
-			document.getElementById("username").value = "国哥你真牛逼";
-		};
-		//11.返回#bj的文本值
-		var btn11Ele = document.getElementById("btn11");
-		btn11Ele.onclick = function(){
-			alert(document.getElementById("city").innerHTML);
-			// alert(document.getElementById("city").innerText);
-		};
-	};
-</script>
+<title>书城首页</title>
+<link type="text/css" rel="stylesheet" href="static/css/style.css" >
 </head>
 <body>
-<div id="total">
-	<div class="inner">
-		<p>
-			你喜欢哪个城市?
-		</p>
-
-		<ul id="city">
-			<li id="bj">北京</li>
-			<li>上海</li>
-			<li>东京</li>
-			<li>首尔</li>
-		</ul>
-
-		<br>
-		<br>
-
-		<p>
-			你喜欢哪款单机游戏?
-		</p>
-
-		<ul id="game">
-			<li id="rl">红警</li>
-			<li>实况</li>
-			<li>极品飞车</li>
-			<li>魔兽</li>
-		</ul>
-
-		<br />
-		<br />
-
-		<p>
-			你手机的操作系统是?
-		</p>
-
-		<ul id="phone"><li>IOS</li><li id="android">Android</li><li>Windows Phone</li></ul>
+	
+	<div id="header">
+			<img class="logo_img" alt="" src="static/img/logo.gif" >
+			<span class="wel_word">网上书城</span>
+			<div>
+				<a href="pages/user/login.html">登录</a> | 
+				<a href="pages/user/regist.html">注册</a> &nbsp;&nbsp;
+				<a href="pages/cart/cart.html">购物车</a>
+				<a href="pages/manager/manager.html">后台管理</a>
+			</div>
 	</div>
-
-	<div class="inner">
-		gender:
-		<input type="radio" name="gender" value="male"/>
-		Male
-		<input type="radio" name="gender" value="female"/>
-		Female
-		<br>
-		<br>
-		name:
-		<input type="text" name="name" id="username" value="abcde"/>
+	<div id="main">
+		<div id="book">
+			<div class="book_cond">
+				<form action="" method="get">
+					价格：<input id="min" type="text" name="min" value=""> 元 - 
+						<input id="max" type="text" name="max" value=""> 元 
+						<input type="submit" value="查询" />
+				</form>
+			</div>
+			<div style="text-align: center">
+				<span>您的购物车中有3件商品</span>
+				<div>
+					您刚刚将<span style="color: red">时间简史</span>加入到了购物车中
+				</div>
+			</div>
+			<div class="b_list">
+				<div class="img_div">
+					<img class="book_img" alt="" src="static/img/default.jpg" />
+				</div>
+				<div class="book_info">
+					<div class="book_name">
+						<span class="sp1">书名:</span>
+						<span class="sp2">时间简史</span>
+					</div>
+					<div class="book_author">
+						<span class="sp1">作者:</span>
+						<span class="sp2">霍金</span>
+					</div>
+					<div class="book_price">
+						<span class="sp1">价格:</span>
+						<span class="sp2">￥30.00</span>
+					</div>
+					<div class="book_sales">
+						<span class="sp1">销量:</span>
+						<span class="sp2">230</span>
+					</div>
+					<div class="book_amount">
+						<span class="sp1">库存:</span>
+						<span class="sp2">1000</span>
+					</div>
+					<div class="book_add">
+						<button>加入购物车</button>
+					</div>
+				</div>
+			</div>
+			
+			<div class="b_list">
+				<div class="img_div">
+					<img class="book_img" alt="" src="static/img/default.jpg" />
+				</div>
+				<div class="book_info">
+					<div class="book_name">
+						<span class="sp1">书名:</span>
+						<span class="sp2">时间简史</span>
+					</div>
+					<div class="book_author">
+						<span class="sp1">作者:</span>
+						<span class="sp2">霍金</span>
+					</div>
+					<div class="book_price">
+						<span class="sp1">价格:</span>
+						<span class="sp2">￥30.00</span>
+					</div>
+					<div class="book_sales">
+						<span class="sp1">销量:</span>
+						<span class="sp2">230</span>
+					</div>
+					<div class="book_amount">
+						<span class="sp1">库存:</span>
+						<span class="sp2">1000</span>
+					</div>
+					<div class="book_add">
+						<button>加入购物车</button>
+					</div>
+				</div>
+			</div>
+			
+			<div class="b_list">
+				<div class="img_div">
+					<img class="book_img" alt="" src="static/img/default.jpg" />
+				</div>
+				<div class="book_info">
+					<div class="book_name">
+						<span class="sp1">书名:</span>
+						<span class="sp2">时间简史</span>
+					</div>
+					<div class="book_author">
+						<span class="sp1">作者:</span>
+						<span class="sp2">霍金</span>
+					</div>
+					<div class="book_price">
+						<span class="sp1">价格:</span>
+						<span class="sp2">￥30.00</span>
+					</div>
+					<div class="book_sales">
+						<span class="sp1">销量:</span>
+						<span class="sp2">230</span>
+					</div>
+					<div class="book_amount">
+						<span class="sp1">库存:</span>
+						<span class="sp2">1000</span>
+					</div>
+					<div class="book_add">
+						<button>加入购物车</button>
+					</div>
+				</div>
+			</div>
+			
+			<div class="b_list">
+				<div class="img_div">
+					<img class="book_img" alt="" src="static/img/default.jpg" />
+				</div>
+				<div class="book_info">
+					<div class="book_name">
+						<span class="sp1">书名:</span>
+						<span class="sp2">时间简史</span>
+					</div>
+					<div class="book_author">
+						<span class="sp1">作者:</span>
+						<span class="sp2">霍金</span>
+					</div>
+					<div class="book_price">
+						<span class="sp1">价格:</span>
+						<span class="sp2">￥30.00</span>
+					</div>
+					<div class="book_sales">
+						<span class="sp1">销量:</span>
+						<span class="sp2">230</span>
+					</div>
+					<div class="book_amount">
+						<span class="sp1">库存:</span>
+						<span class="sp2">1000</span>
+					</div>
+					<div class="book_add">
+						<button>加入购物车</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<div id="page_nav">
+		<a href="#">首页</a>
+		<a href="#">上一页</a>
+		<a href="#">3</a>
+		【4】
+		<a href="#">5</a>
+		<a href="#">下一页</a>
+		<a href="#">末页</a>
+		共10页，30条记录 到第<input value="4" name="pn" id="pn_input"/>页
+		<input type="button" value="确定">
+		</div>
+	
 	</div>
-</div>
-<div id="btnList">
-	<div><button id="btn01">查找#bj节点</button></div>
-	<div><button id="btn02">查找所有li节点</button></div>
-	<div><button id="btn03">查找name=gender的所有节点</button></div>
-	<div><button id="btn04">查找#city下所有li节点</button></div>
-	<div><button id="btn05">返回#city的所有子节点</button></div>
-	<div><button id="btn06">返回#phone的第一个子节点</button></div>
-	<div><button id="btn07">返回#bj的父节点</button></div>
-	<div><button id="btn08">返回#android的前一个兄弟节点</button></div>
-	<div><button id="btn09">返回#username的value属性值</button></div>
-	<div><button id="btn10">设置#username的value属性值</button></div>
-	<div><button id="btn11">返回#bj的文本值</button></div>
-</div>
+	
+	<div id="bottom">
+		<span>
+			尚硅谷书城.Copyright &copy;2015
+		</span>
+	</div>
 </body>
 </html>
